--- a/config.org
+++ b/config.org
@@ -2074,13 +2074,23 @@ Expose the aliases to the =x= keybinding.
     #+begin_src emacs-lisp :tangle yes
   (map! :map 'elfeed-search-mode-map
         :nv "x" #'dan/elfeed-search-tag-all-star
-        :nv "X" #'dan/elfeed-search-untag-all-star)
+        :nv "X" #'dan/elfeed-search-untag-all-star))
 #+end_src
 
 Automatically updating feed when opening =elfeed=.
 
 #+begin_src emacs-lisp :tangle yes
-  (add-hook! 'elfeed-search-mode-hook #'elfeed-update))
+(add-hook! 'elfeed-search-mode-hook #'elfeed-update)
+#+end_src
+
+When updating the entries, commit changes to the DB.
+
+#+begin_src emacs-lisp :tangle yes
+(after! elfeed
+  (defadvice! dan/elfeed-search-update--force--commit-changes (&rest _)
+    "After updating the elfeed, commit changes to DB."
+    :after #'elfeed-search-update--force
+    (elfeed-db-save-safe)))
 #+end_src
 
 Give it an easy keybinding to access it:
